# Tetris_in_C

./: CMakeLists.txt
src/: header.h  main.cpp  precompiled.h
vscode/: Tetris in C.code-workspace
